--- a/package.json
+++ b/package.json
@@ -1,26 +1,15 @@
 {
-  "name": "airquality",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name":"aqi",
+  "version":"1.0.0",
+  "description":"Air Quality Index Project. This will run both frontend and backend servers concurrently. To run separately : 'cd backed && npm start' and 'cd frontend && npm run dev'",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "start": "concurrently \"cd backend && npm start\" \"cd frontend && npm run dev\""
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "concurrently": "^8.2.2"
   },
-  "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.2",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "vite": "^5.3.1"
-  }
+  "workspaces": [
+    "backend",
+    "frontend"
+  ]
 }
