--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,15 @@
 {
-  "name":"aqi-backend",
+  "name": "aqi-backend",
   "version": "1.0.0",
   "description": "Backend for AQI project that fetches data from DynamoDB",
   "main": "app.js",
-  "scripts":{
+  "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
     "aws-sdk": "^2.1654.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
